Fixed incorrect alignment on sign in/up forms where forms would appear too far to the left on larger screen sizes

--- a/lamp/static/main.css
+++ b/lamp/static/main.css
@@ -392,3 +392,8 @@ form.sign-in-form, form.sign-up-form {
 .form_required::before {
     content: " *";
 }
+
+form.burrow-form {
+    margin-left: auto;
+    margin-right: auto;
+}
